--- a/style.css
+++ b/style.css
@@ -240,10 +240,22 @@ a:hover{
     background-color: black;
     background-repeat:no-repeat;
 }
-a:hover{
-    background: green;
-    border-radius: 2px;
+    .carasoul .imgs .photos{
+    width: 140px;
+    height: 180px;
+    position: absolute;
+    top: 80%;
+    transform: translateY(-70%);
+    left: 70%;
+    box-shadow: 0 25px 50px rgba(0,0 ,0 ,0.3 );
+    background-position: 50% 50%;
+    background-size: cover;
+    z-index: 100;
+    transition: 1s;
+    border-radius: 8px;
+    
 }
+
     
   
 }
